# camstack

./: .gitignore  .pre-commit-config.yaml  .style.yapf  DETAILED_CAMERA_INIT.md  README.md  TODO.md  buffycam.py  chuckcam.py  dvinfo.out  generic_main.py  image_processing.py  nustart  pyproject.toml  server_main.py  setup.py  tst.py  tst1.py
backup/: buffycam  chuckcam  renocam  startCRED2  startKCAM
camstack/: camstack_generic_main.py  camstack_server_main.py  pyro_keys.py  viewer_common.py
camstack/acq/: flycapture_usbtake.py  simcam_framegen.py  spinnaker_usbtake.py
camstack/cam_mains/: __init__.py  alala_bsi.py  alala_orcam.py  apapane.py  apapane_at_aorts.py  buffycam.py  chuckcam.py  first_orcam.py  first_pupil.py  glintcam.py  iiwi.py  iiwicam.py  kalaocam.py  kiwikiu.py  main.py  miles_orcam.py  orcam.py  palila.py  pueo.py  rajnicam.py  renocam.py  ristretto.py  simucam.py  vampires.py  vcam.py  vpupcam.py
camstack/cams/: andors.py  andors_autocamlink.py  ao_apd.py  autodumbedt.py  base.py  cred1.py  cred2.py  dcamcam.py  edt_base.py  edtcam.py  flycapturecam.py  nuvu.py  ocam.py  params_shm_backend.py  prime_bsi.py  simulatedcam.py  spinnakercam.py  vampires.py
camstack/core/: Makefile  dcamprop.py  dummyCamera.py  edtcamera.py  edtdll.py  edtinterface.py  edtlib.py  logger.py  make_cset_and_rt.py  thread.py  tmux.py  utilities.py  wcs.py
camstack/deprecatedscripts/: depwarning.py  main.py
camstack/utilities/: pyroquick.py
camstack/viewerclasses/: iiwi.py  kiwikiu.py  pueo.py  vcam.py  vpupcam.py
camstack/viewermain/: anycam.py  vcam.py
camstack/viewermains/: anycam.py  apapane.py  firstcam.py  iiwi.py  kiwikiu.py  palila.py  pueo.py  pueo_old.py  vcam.py  vpupcam.py
camstack/viewers/: backend_utils.py  frontend_utils.py  generic_viewer_backend.py  generic_viewer_frontend.py  image_stacking_plugins.py  onoffmodes.py  plugin_arch.py  plugins.py  renocam.py  viewer_common.py  viewer_utils.py  vpupcam.py
camstack/viewers/vampires/: base.py  plugins.py  vcam.py  vpupcam.py
camstack/viewers/viewers/: firstcam.py  pueo.py  vpupcam.py
camstack/viewertools/: camera_control_plugins.py  first.py  frontend_utils.py  generic_viewer_backend.py  generic_viewer_frontend.py  image_stacking_plugins.py  plugin_arch.py  plugins.py  pygame_viewer_frontend.py  pywfs_plugins.py  utils_backend.py  utils_frontend.py  vampires_plugins.py  viewer_common.py
camstack/viewertools/vampires/: plugins.py  vcam.py  vpupcam.py
conf/modes/vampires/: vcam1_mbi_crop.toml  vcam1_mbir_crop.toml  vcam2_mbi_crop.toml  vcam2_mbir_crop.toml
config/: andor_897.cfg  cred1_16bit.cfg  cred1_ristretto.cfg  cred2_14bit.cfg  cred2_16bit.cfg  cred2_320256_16bit.cfg  cred2_glint.cfg  cred2_single_channel.cfg  first.cfg  first_sedfile.cfg  nuvu_kalao.cfg  nuvu_kalao_16bit.cfg  ocam_bin2.cfg  ocam_full.cfg  vampires_sedfile.cfg
lib/: README.md  libGL.so.1
ocamdecode/: gen_ocamdecode_maps.py  ocam2dsliceind_1.fits  ocam2dsliceind_3.fits  ocam2kpixi_1.fits  ocam2kpixi_1_REV.fits  ocam2kpixi_3.fits  ocam2kpixi_3_REV.fits  ocamdecoderun_mode  pixsliceNB_1.txt  pixsliceNB_3.txt
scripts/: cam-alalacamstart  cam-apapanestart  cam-buffystart  cam-chuckstart  cam-dummystart  cam-fircamstart  cam-firstpupstart  cam-glintstart  cam-iiwistart  cam-killall  cam-kiwikiustart  cam-milesstart  cam-nuvustart  cam-ocamstart  cam-orcamstart  cam-palilastart  cam-rajnistart  cam-restartdeps  cam-vcam1start  cam-vcam2start  cam-vcamautostart  cam-vcamstart  cam-vpupcamstart  camstack_generic_main.py  camstack_server_main.py  firststart  iiwi_downsampler.py  nocam-vampires  nuke_edt_scexao_at_scexao2  ocamstart  startBuffy  startChuck  startGLINT  startOCAM  startRajni  startVampires  vcamstart  vcamstart-bash
src/: compile  compile_dcamusb  compile_edt  dcam_utils.c  dcam_utils.h  dcamapi4.h  dcamprop.h  dcamusbtake.c  edttake.c  flycapture_usbtake  imgtake.c  imgtake_generic.c  shmimmonstartup  simcam_framegen  spinnaker_usbtake
src/camstack/: flycapture_usbtake.py  simcam_framegen.py  spinnaker_usbtake.py
src/camstack/cam_mains/: alala_orcam.py  first_orcam.py  glintcam.py  kalaocam.py  kiwikiu.py  main.py  pueo.py  vampires.py
src/camstack/cams/: edtcam.py  flycapturecam.py  nuvu.py  ocam.py  simulatedcam.py  spinnakercam.py
src/camstack/core/: logger.py  utilities.py
src/camstack/viewers/: anycam.py  apapane.py  firstcam.py  palila.py  pueo.py  viewer_common.py
viewers/: anycam.py  apapane.py  buffycam.py  chuckcam.py  common.py  firstcam.py  palila.py  pueo.py  renocam.py  vcam1.py  vcam2.py  vpupcam.py
