[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=58", "wheel"]

[project]
authors = [
  {name = "Vincent Deo", email = "vdeo@naoj.org"},
  {name = "Miles Lucas", email = "mdlucas@hawaii.edu"},
]
dependencies = [
  "docopt",
  "libtmux",
  "pygame", # "pyMilk" DO NOT - there is a pyMilk on pipy which is a completely different thing.
]
description = "SCExAO camera codebase"
name = "camstack"
readme = "README.md"
version = "0.1.0"

[tool.setuptools]
packages = ["camstack"]
script-files = [
  "./scripts/cam-restartdeps",
  "./scripts/cam-killall",
  "./scripts/cam-vcamstart",
]

#[tool.setuptools.packages.find]
#include = ["camstack*"]
#[project.optional-dependencies]

[project.scripts]
camstart = "camstack.cam_mains.main:main"

cam-alalacamstart = "camstack.deprecatedscripts.main:alala"
cam-apapanestart = "camstack.deprecatedscripts.main:apapane"
cam-fircamstart = "camstack.deprecatedscripts.main:first"
cam-firstpupstart = "camstack.deprecatedscripts.main:first_pupil"
cam-glintstart = "camstack.deprecatedscripts.main:glint"
cam-iiwistart = "camstack.deprecatedscripts.main:iiwi"
cam-kiwikiustart = "camstack.deprecatedscripts.main:kiwikiu"
cam-nuvustart = "camstack.deprecatedscripts.main:kalao"
cam-ocamstart = "camstack.deprecatedscripts.main:pueo"
cam-palilastart = "camstack.deprecatedscripts.main:palila"
cam-vcam1start = "camstack.deprecatedscripts.main:vcam1"
cam-vcam2start = "camstack.deprecatedscripts.main:vcam2"
cam-vpupcamstart = "camstack.deprecatedscripts.main:vpup"

anycam = "camstack.viewers.anycam:main"
apapane = "camstack.viewers.apapane:main"
firstcam = "camstack.viewers.firstcam:main"
palila = "camstack.viewers.palila:main"
pueo = "camstack.viewers.pueo:main"
vcam = "camstack.viewers.vcam:main"
vpupcam = "camstack.viewers.vpupcam:main"
